# flashprobe-mcp

./: Cargo.toml  DESIGN.md  README.md  mcp_probe.py
.github/workflows/: ci.yml
src/: detect.rs  esp_noise.rs  inputs.rs  main.rs  server.rs
src/backend/: espflash.rs  mod.rs  probers.rs
src/capture/: decode.rs  filter.rs  mod.rs  render.rs  source.rs
src/tools/: device.rs  mod.rs  monitor.rs
