[package]
name = "espflash-mcp"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
espflash = { version = "4.3.0", default-features = false, features = ["serialport"] }
regex = "1.12.3"
rmcp = { version = "0.16.0", features = ["server", "transport-io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serialport = "4.8.1"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
